@@ -1,6 +1,7 @@
 Overview of changes in lightdm 1.0.3
 
     * Fix reference counting issue in ConsoleKit code
+    * Really add the lightdm-guest-session-wrapper
 
 Overview of changes in lightdm 1.0.2
 
